--- a/src/app/advanced-search/elements-search/elements-search.component.html
+++ b/src/app/advanced-search/elements-search/elements-search.component.html
@@ -4,8 +4,8 @@
         <mat-divider class="bg-white"></mat-divider>
     </div>
     <div class="flex flex-col">
-        <div  *ngFor="let el of displayElementList();" class="checkbox-custom {{el.elementPicture}}">
-            <mat-checkbox #button class="ml-5  mt-4" [checked]="el.state" (click)="selectedElement($event, button)"> 
+        <div *ngFor="let el of displayElementList" class="checkbox-custom {{el.elementPicture}}">
+            <mat-checkbox class="ml-5  mt-4" [(ngModel)]="el.state" (change)="selectedElement($event)"> 
                 <span class="text-white !mb-0 ml-2 text-lg"> {{el.name}}</span>  
             </mat-checkbox>
        </div>
