--- a/src/app/units/units.component.html
+++ b/src/app/units/units.component.html
@@ -1,12 +1,12 @@
 
 <div>
   <div class="pt-5 flex justify-center md:justify-start ml-2">
-    <app-search-bar (resultSearchTextField$)="resultSearchTextFieldEvent($event)"></app-search-bar>
+    <app-search-bar (resultSearchTextField$)="searchByInputTextEvent($event)"></app-search-bar>
   </div>
   <div class="flex flex-col lg:flex-row">
  
     <div class="h-auto">
-      <app-advanced-search (searchByLevel$)="searchByLevelEvent($event)"></app-advanced-search>
+      <app-advanced-search (searchByLevel$)="searchByLevelEvent($event)" (filterByElementsUpdate)="searchByElementEvent($event)"></app-advanced-search>
     </div>
 
 
@@ -25,7 +25,7 @@
          </div>
 
         <div class="h-6 w-6">
-          <img class="h-6 w-6" src="{{unitsList.element.picture}}" alt="{{unitsList.element.alt}}">
+          <img class="h-6 w-6" src="{{unitsList.elementPicture.picture}}" alt="{{unitsList.elementPicture.alt}}">
         </div>
       </div>
     </mat-card-header>
