add special attack search

--- a/src/app/advanced-search/advanced-search.component.html
+++ b/src/app/advanced-search/advanced-search.component.html
@@ -5,4 +5,7 @@
     <div class="h-auto">
         <app-elements-search (filterByElements)="filterByElementsEvent($event)"></app-elements-search>
     </div>
+    <div class="h-auto">
+        <app-special-attack-search (filterBySpecialAttack)="filterBySpecialAttack($event)"></app-special-attack-search>
+    </div>
 </div>
