--- a/src/app/advanced-search/advanced-search.component.html
+++ b/src/app/advanced-search/advanced-search.component.html
@@ -1,4 +1,12 @@
-<div class="h-full w-64 rounded-2xl ml-2 mt-2 mr-5 bg-blackCardUnit">
+
+<div class="h-full w-64 mt-2 rounded-2xl ml-2 mt-2 mr-5 bg-blackCardUnit">
+    <div class="h-auto text-center">
+        <h2 class="text-white !m-0 pl-3 pt-3 pb-2">Filtres</h2>
+        <h2 class="text-white !m-0 pl-3 pt-3 pb-2">Filtre de base</h2>
+    </div>
+    <div class="h-auto">
+        <app-order-search (filterByOrder)="filterByOrder($event)"></app-order-search>
+    </div>
     <div class="h-auto mb-2">
         <app-level-search [levelsearch$]="advancedSearch$" (levelSearchResult$)="levelSearchResultEvent($event)" [newSearch$]="newResultSearch$"></app-level-search>
     </div>
