--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <app-navigation></app-navigation>
      <router-outlet></router-outlet>
   </div>
-  <div class="absolute bottom-0 bg-blackCardUnit h-16 w-full mt-3 flex items-center">
+  <div class="absolute bottom-0 bg-blackCardUnit h-16 mt-2 w-full flex items-center">
     <footer class="text-white "></footer>
   </div>
 </div>
