Integration of the tabs filter

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="rForm">
+<div class="flex justify-center items-center bg-lightBlue w-full custom-units-text">
+  <form [formGroup]="rForm">
     <mat-form-field appearance="fill" class="w-80 lg:w-120">
         <mat-label>Entrez un nom d'unité</mat-label>
       <input matInput formControlName="search">
@@ -6,3 +7,5 @@
       <!--<mat-hint>Hint</mat-hint>-->
     </mat-form-field>
 </form>
+</div>
+
