--- a/src/app/search-main-filter/search-main-filter.component.html
+++ b/src/app/search-main-filter/search-main-filter.component.html
@@ -1,8 +1,8 @@
 
-<div class="h-full w-64 mt-2 rounded-2xl ml-2 mt-2 mr-5 bg-blackCardUnit">
+<div class="h-full w-64 mt-2 rounded-2xl ml-2 mt-2 mr-5 bg-blackCardUnit" *ngIf="filterName === 'Principale'">
     <div class="h-auto text-center">
         <h2 class="text-white !m-0 pl-3 pt-3 pb-2">Filtres</h2>
-        <h2 class="text-white !m-0 pl-3 pt-3 pb-2">Filtre de base</h2>
+        <h2 class="text-white !m-0 pl-3 pt-3 pb-2">Filtre principale</h2>
     </div>
     <div class="h-auto">
         <app-order-search (filterByOrder)="filterByOrder($event)"></app-order-search>
