add of the feature direction filter

--- a/src/app/search-main-filter/search-main-filter.component.html
+++ b/src/app/search-main-filter/search-main-filter.component.html
@@ -8,6 +8,9 @@
         <app-order-search (filterByOrder)="filterByOrder($event)"></app-order-search>
     </div>
     <div class="h-auto">
+        <app-direction-filter></app-direction-filter>
+    </div>
+    <div class="h-auto">
         <app-gender-filter></app-gender-filter>
     </div>
     <div class="h-auto mb-2">
@@ -19,4 +22,5 @@
     <div class="h-auto">
         <app-special-attack-search (filterBySpecialAttack)="filterBySpecialAttack($event)"></app-special-attack-search>
     </div>
+    
 </div>
